# gltf-loader

./: .gitmodules  CMakeLists.txt  Doxyfile
include/: Camera.hpp  Shader.hpp  Texture.hpp  Window.hpp
lib/: CMakeLists.txt  Camera.cpp  Shader.cpp  Texture.cpp  Window.cpp  test.cpp
res/shaders/: triangle.frag  triangle.vert
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  CameraTest.cpp  hello.cpp
